[gd_scene load_steps=6 format=2]

[ext_resource path="res://darkfire.gd" type="Script" id=1]
[ext_resource path="res://texture/knight quest/darkmage.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.7216, 36.7348 )

[sub_resource type="Animation" id=2]
resource_name = "boomer"
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.7153, 31.5892 )

[node name="boomer" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 30.4785, 31.8349 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 31.077, 28.7722 )
scale = Vector2( 0.0871983, 0.0871983 )
texture = ExtResource( 2 )
vframes = 3
hframes = 3
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_process_mode = 0
anims/boomer = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30.3656, 33.5149 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
